--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Color sampler</title>
 </head>
 <body>
-    <section id="root"></section>
+    <div id="root"></div>
+    <script type="module" src="./main.jsx"></script>
 </body>
 </html>
